Correcting minor bug in README file

--- a/README
+++ b/README
@@ -1,5 +1,1 @@
-This is a Hello World git repository:wq
-o
-
-
-
+This is a Hello World git repositor, and its contents have been checked and modified in a branchy
